// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createRule should assign default option values 1`] = `
Object {
  "exclude": /node_modules/,
  "use": Object {
    "loader": "loader",
  },
}
`;

exports[`createRule should merge provided options 1`] = `
Object {
  "exclude": /node_modules/,
  "test": /\\\\\\.jsx\\?\\$/,
  "use": Object {
    "loader": "simple",
  },
}
`;
